syntax = "proto3";

package executors.v1.execute.v1.activities.v1;

import "executors/v1/plan/v1/plan_ref.proto";

option go_package = "github.com/powertoolsdev/mono/pkg/workflows/executors/v1/execute/v1/activities/v1";

message QueueJobRequest {
  .executors.v1.plan.v1.PlanRef plan = 1;
}

message QueueJobResponse {
  string job_id = 1;
}
